# agent-deployments

./: .dockerignore  .gitignore  .markdownlint.yml  CODE_OF_CONDUCT.md  CONSUMER_CONTRACT.md  CONTRIBUTING.md  MANIFEST_SCHEMA.md  Makefile  README.md  SECURITY.md  STRUCTURE.md  agents.md  catalog.yaml  llms.txt  vendir.lock.yml  vendir.yml
.github/ISSUE_TEMPLATE/: bug.md  new-prototype.md  stack-swap.md
.github/workflows/: blueprints-bump.yml  catalog-drift.yml  ci.yml  recipe-smoke.yml  sync-blueprints.yml
common/: docker-compose.base.yml  versions.md
common/docker/: Dockerfile.python  Dockerfile.typescript
common/python/: pyproject.toml
common/python/agent_common/: __init__.py
common/python/agent_common/auth/: __init__.py  jwt.py
common/python/agent_common/logs/: __init__.py  structlog_config.py
common/python/agent_common/mcp_client/: __init__.py  client.py
common/python/agent_common/observability/: __init__.py  langfuse.py
common/python/agent_common/ratelimit/: __init__.py  slowapi_setup.py
common/python/agent_common/testing/: __init__.py  fixtures.py
common/python/auth/: __init__.py  jwt.py
common/python/logging/: __init__.py  structlog_config.py
common/python/mcp/: __init__.py  client.py
common/python/observability/: __init__.py  langfuse.py
common/python/ratelimit/: __init__.py  slowapi_setup.py
common/python/testing/: __init__.py  fixtures.py
common/python/tests/: test_auth.py  test_logging.py  test_mcp.py  test_ratelimit.py  test_testing.py
common/typescript/: biome.json  package.json  pnpm-lock.yaml
docs/: HOW_TO_ADD_AN_ENTRY.md  README.md  blueprint-map.md  quickstart.md  stack.md
docs/capabilities/: README.md  TEMPLATES.md
docs/capabilities/frontend/templates/streamlit/: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
docs/capabilities/frontend/templates/streamlit/components/: chat_message_with_tools.py
docs/cross-cutting/: README.md  audit-logging.md  (+23 more)
prototypes/research-assistant/python/: Dockerfile  docker-compose.yml  pyproject.toml
prototypes/research-assistant/python/app/: main.py  settings.py
prototypes/research-assistant/python/app/agent/: researcher.py
prototypes/research-assistant/python/app/api/: research.py
prototypes/research-assistant/python/app/db/: models.py
prototypes/research-assistant/python/app/models/: schemas.py
prototypes/research-assistant/python/app/tools/: cite_sources.py  extract_facts.py  summarize.py  web_search.py
prototypes/research-assistant/python/eval/: promptfoo.yaml
prototypes/research-assistant/python/tests/unit/: test_api.py  test_schemas.py  test_tools.py
scripts/: _seed_aliases.yaml  generate_catalog.py  requirements.txt  run_smoke_test.py  test_catalog_validation.py
(+352 files in other folders)
