[project]
name = "streamlit-chat-template"
version = "0.1.0"
description = "Streamlit chat UI for the project's agent backend."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30,<2",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
